DOMMatrix and DOMMatrixReadOnly

--- a/tests/wpt/mozilla/tests/mozilla/interfaces.html
+++ b/tests/wpt/mozilla/tests/mozilla/interfaces.html
@@ -21,6 +21,8 @@ test_interfaces([
   "CloseEvent",
   "CSS",
   "CSSStyleDeclaration",
+  "DOMMatrix",
+  "DOMMatrixReadOnly",
   "DOMPoint",
   "DOMPointReadOnly",
   "DOMQuad",
